--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,25 @@
         app:layout_constraintVertical_bias="0.63"/>
 
     <Button
-        android:id="@+id/btn_view"
+        android:id="@+id/btn_inv"
         android:layout_width="138dp"
         android:layout_height="49dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="VIEW DATABASE"
+        android:text="VIEW SALES"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.843"/>
+
+    <Button
+        android:id="@+id/btn_sales"
+        android:layout_width="138dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:text="VIEW INVENTORY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
